# tifloats_lib_rs

./: .gitignore  Cargo.toml  LICENSE.MIT  README.md
benches/: correct.rs  float.rs
src/: correct.rs  error.rs  fast.rs  float.rs  lib.rs  mantissa.rs
src/correct/: mantissa.rs
