[package]
name = "tifloats"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/TI-Toolkit/tifloats_lib_rs"
repository = "https://github.com/TI-Toolkit/tifloats_lib_rs"
description = "Speedy, accurate emulation of TI-Floats."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "float"
harness = false

[profile.bench]
debug = true